--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/image.ico">
+  <meta name="description" content="I am a Hispanic young woman who was raised and born in Los Angeles, California. I am a sophomore student attending the University of California, Riverside.">
+  <meta name="author" content="862208084">
 
-  <title>John Doe - Business Administration</title>
-
+  <title>Catarina Juares Chiguil - Human Resource</title>
+Sociology Major
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Catarina Juares Chiguil</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/CatarinaJuaresChiguil.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Catarina Juares Chiguil
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">My name is Catarina Juares and I am 19 years old. I am a Hispanic young woman who was born and raised in Los Angeles, California. My parents are from Guatemala and I have two girl siblings younger than me. I am currently a sophomore student attending the University of California, Riverside but I am undeclared for now; however, I am planning to major in Sociology. <br><br>
 
-        Enter bio here<br><br>
+        I am a very generous and caring person. I enjoy helping others when they need assistance. Also, I am a determined person because I do what's best for me to strive in life and I make sure I fulfill all my needs. Responsibility is one of the values I have as well as being respectful to others. I also appreciate and I am thankful for everything that comes to my life because it has made me become into the person that I am today.<br><br>
 
-        Enter bio here
+        I am aiming to get a bachelor's degree or a master's degree in the field that I will be studying in. For example, majoring in sociology can help me prepare for a variety of other careers. This includes getting a job in human service, social work, or any other community organizations. In the future, I have sets of goals that I want to accomplish. Some of the goals I have are buying a house, working in a place that suits my interests, and having a nice stable job/life.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/cat_juares07/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/catarinajuares">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/cat_juares">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:cjuar038@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Teaching Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Para Los Ninos</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Created posters for events<br> 
+              • Helped students with homework<br>
+              • Spoke with students one-on-one <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2019 - Febuary 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
+            <h3 class="mb-0">Shopper</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for collecting and packing costumers orders<br>
+              • Scanning and storaging orders<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">Febuary 2021 - June 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Food Drive</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Stop Club</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped promte food drive to high school students<br>
+            • Organized and packed food<br>
+            • Delivered food to the homeless around the community<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">December 2016 - May 2017</span>
           </div>
         </div>
 
@@ -151,34 +150,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Miguel Contreras Learning Complex</h3>
+            <div class="subheading mb-3">Los Angeles School of Global Studies</div>
+            <div>Global Ambassador</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2016 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">CHASS Department</div>
+            <div>Sociology Major</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">June 2020 - June 2024</span>
           </div>
         </div>
 
@@ -191,7 +179,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG-1385.jpeg" width="500px">
+            <img src="img/IMG-1384.jpeg" width="500px"><br>
+            <img src="img/IMG-4005.jpeg" width="500px">
+            <img src="img/IMG-7132.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +190,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Catarina Juares Chiguil</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
